@@ -6,6 +6,7 @@
 	* src/network.c (tt_on_get_timeline && tt_network_get_data): bugfix when
 	setting	current_timeline.
 	* src/gui.c (tt_gui_ventana_principal): Defaults settings are TRUE
+	* src/gui.c (tt_gui_create_dialogo_login): auth_remember data fixes.
 
 
 2007-08-18  Brian Pepple  <bpepple@fedoraproject.org>
